--- a/hello.html
+++ b/hello.html
@@ -6,7 +6,7 @@
   <body>
     <h1 id="heading" style="color: black">Hello, JavaScript</h1>
     <input type="text" id="userName" placeholder="¬ведите ваше им€">
-    <input type="submit" id="nameButton" value="Greeting!">
+    <input type="button" id="nameButton" value="Greeting!">
     
     <script src="js/hello.js"></script>
   </body>
